--- a/possessed.css
+++ b/possessed.css
@@ -53,7 +53,7 @@
   transform: scale(1.05);
 }
 
-/* --- ACTION PROTOCOLS (New) --- */
+/* --- ACTION PROTOCOLS --- */
 .role-actions-list {
   display: flex;
   flex-direction: column;
